<resources>
    <string name="app_name">MyUser</string>
    <string name="image_user">Image User</string>
    <string name="label_username">Username</string>
    <string name="label_company">Company</string>
    <string name="image_share">Image Share</string>
    <string name="label_search_username">Search Username</string>
    <string name="label_id_username">Id Username</string>
    <string name="label_text_plain">text/plain</string>
    <string name="label_share_user">Bagikan Informasi User</string>
    <string name="image_arrow_back">Image Arrow Back</string>
    <string name="label_name">Name</string>
    <string name="label_location">Location</string>
    <string name="label_value">100</string>
    <string name="label_following">Following</string>
    <string name="label_follower">Follower</string>
    <string name="label_repository">Repository</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_favorite">Favorite</string>
</resources>