<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvUser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimen_8dp"
    android:layout_marginTop="@dimen/dimen_4dp"
    android:layout_marginEnd="@dimen/dimen_8dp"
    android:layout_marginBottom="@dimen/dimen_4dp"
    card_view:cardCornerRadius="@dimen/dimen_8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:src="@drawable/ic_launcher_background"
            app:civ_border_width="@dimen/dimen_2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/image_user" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/label_username"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/imgUser"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvIdUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:text="@string/label_id_username"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_14sp"
            android:textColor="@color/colorGrey"
            app:layout_constraintStart_toEndOf="@+id/imgUser"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <ImageView
            android:id="@+id/imgShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:layout_marginEnd="@dimen/dimen_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/image_share" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>