<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">

    <include
        android:id="@+id/appBarUser"
        layout="@layout/layout_appbar_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUser"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:src="@drawable/ic_launcher_background"
        app:civ_border_width="@dimen/dimen_2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarUser"
        android:contentDescription="@string/image_user" />

    <TextView
        android:id="@+id/tvCompany"
        android:text="@string/label_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16sp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        app:layout_constraintStart_toEndOf="@+id/imgUser"
        app:layout_constraintTop_toBottomOf="@id/appBarUser" />

    <TextView
        android:id="@+id/tvLocation"
        android:text="@string/label_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/text_size_12sp"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        app:layout_constraintStart_toEndOf="@+id/imgUser"
        app:layout_constraintTop_toBottomOf="@+id/tvCompany" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        app:layout_constraintStart_toEndOf="@+id/imgUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvFollowing"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvFollower"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvFollowingValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_value"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_16sp"
                    android:layout_marginBottom="@dimen/dimen_4dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvFollowing"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_following"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvFollower"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@+id/cvRepository"
            app:layout_constraintEnd_toStartOf="@+id/cvFollowing"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvFollowerValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_value"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_16sp"
                    android:layout_marginBottom="@dimen/dimen_4dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvFollower"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvFollower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_follower"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvRepository"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cvFollower"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvRepositoryValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_value"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_16sp"
                    android:layout_marginBottom="@dimen/dimen_4dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvRepository"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvRepository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_repository"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUser"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"/>


</androidx.constraintlayout.widget.ConstraintLayout>